tests/mocks/fail/http-middlewares/app/middlewares/http-middlewares/middleware.js
'use strict';
module.exports = class Middleware {


};
